<?xml version="1.0"?>
<package format="2">
  <name>challenge_project</name>
  <version>0.0.0</version>
  <description>The challenge_project package</description>

  <maintainer email="mfansitc@condorcet93.fr">Maxime Fansi</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlebot3_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>turtlebot3_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>



</package>
